--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,13 @@ h1, #description {
 	margin-right: 10px;
 	cursor: pointer;
 }
-.times, .lengthlabel{
-	line-height: 34px;;
-}
-.length, .times {
+.times{
+	line-height: 34px;
 	margin-right: 10px;
 	float: left;
 }
-.repeattime, .length {
+
+.repeattime {
 	width: 50%;
 	margin-right: 10px;
 	float: left;
@@ -24,9 +23,43 @@ h1, #description {
 .row {
 	padding-top: 10px;
 }
+.row div {
+	margin-top: 10px;
+}
 .repeat {
 	display: inline;
 }
 input, option {
 	text-align: center;
+}
+
+#generate {
+	text-align: center;
+	font-size: 20px;
+	margin-top: 10px;
+	margin-left: 15px;
+}
+
+#tablecontainer {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background-color:rgba(0,0,0,0.5);
+	display: none;
+} 
+#ascii, #unicode {
+	color: yellow;
+	position: absolute;
+	left: 50%;
+	top:50%;
+	width: 33%;
+	height: 33%;
+	background-color: white;
+	opacity: 1;
+	margin-top: -15%;
+	margin-left: -15%;
+	display: none;
 }
