codes of new UI design

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,297 @@
-h1, #description {
-	padding-left: 10%; 
+body {
+	background-color: white;
 }
-.btn-group {
-	float: right;
-}
-.add {
-	line-height: 34px;
-	margin-right: 10px;
+div#banner>ol>li>a {
+	text-decoration: none;
 	cursor: pointer;
 }
-.times{
-	line-height: 34px;
-	margin-right: 10px;
-	float: left;
+@media (max-width: 767px) {
+	div#banner {
+		width: 100%;
+		min-height: 120px;
+		overflow: auto;
+		background-color: #E1E6FA;
+		padding:10px;
+		position: relative;
+	}
+	div#banner>img {
+		margin-left: 2%;
+		width: 180px;
+		height: auto;
+		float: left;
+	}
+	div#banner>ol {
+		position: absolute;
+		width: 100%;
+		clear: both;
+		top: 68%;
+		left: 5%;
+		margin-bottom: 0px;
+		background-color: #E1E6FA;
+	}
+
+	div#editor, div#timeline{
+		width: 90%;
+		margin: 5% auto;
+		height: 530px;
+		background-color: #ACDDEE;
+		padding: 1% 1%;
+		border-radius: 5px;
+		overflow: scroll;
+	}
+	div#preview {
+		width: 90%;
+		height: 530px;
+		background-color: white;
+		margin: 0 auto 5%;
+		padding: 2em;
+		border-radius: 5px;
+ 		overflow: scroll;
+
+	}
+}
+@media (min-width: 768px) {
+	div#banner {
+		width: 100%;
+		overflow: auto;
+		background-color: #E1E6FA;
+		padding:10px;
+		position: relative;
+	}
+	div#banner>img {
+		margin-left: 2%;
+		width: 16.7%;
+		min-width: 180px;
+		height: auto;
+		float: left;
+	}
+	div#banner>ol {
+		position: absolute;
+		width: 30%;
+		clear: left;
+		top: 55%;
+		left: 30%;
+		margin-bottom: 0px;
+		background-color: #E1E6FA;
+	}
+	div#editor, div#timeline {
+		float: left;
+		width: 56%;
+		height: 530px;
+		background-color: #ACDDEE;
+		margin: 2% 2%;
+		padding: 2em;
+		border-radius: 5px;		
+		overflow: scroll;
+	}
+	div#preview {
+		float: left;
+		width: 38%;
+		height: 530px;
+		background-color: white;
+		margin: 2% 2% 2% 0;
+		padding: 1% 1%;
+		border-radius: 5px;
+		overflow: scroll;
+	}
 }
 
-.repeattime {
-	width: 50%;
-	margin-right: 10px;
+#side-btn {
+	margin-right: 2%;
+	margin-top: 10px;
+	float: right;
+}
+#side-btn>button:hover {
+	background-color: #C2CAFA;
+}
+div#mainbody {
+	width: 100%;
+	overflow: hidden;
+	background-color: #645D68;
+	color: #304269;
+}
+div#data-field {
+	margin: 1%;
+}
+div.data-block {
+	margin: 1% 0;
+}
+.fa {
+	color: #304269;
+	opacity: 0.8;
+}
+.fa-folder-open {
+	position: absolute;
+	top: 3px;
+	left: 80%;
+	opacity: 0.5;
+	cursor: pointer;
+}
+div.column {
+	position: relative;
+	width: 35%;
+	display: inline;
+}
+.order {
 	float: left;
+	top: 4px;
+}
+.column>input {
+	text-align: left;
+	margin: 0 1%; 
+}
+div#add>p {
+	margin-top: 1%;
+	line-height: 34px;
+	font-size: 16px;
+}
+
+div#add>i {
+	margin: 0 1%;
+	padding-left: 2px;
+	float: left;
+	cursor: pointer;
+}
+
+div#export{
+	width: 100%;
+	overflow: hidden;
+	font-size: 16px;
+}
+div#export>ul {
+	padding: 0;
+}
+div#export>ul>li{
+	list-style: none;
+	text-align: center;
+	cursor: pointer;
+	font-size: 14px;
+	margin: 0 3px 0 0;
+	padding: 3px 0 0 0;
+	float: left;
+	width: 100px;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	background-color: #efefef;
+	line-height: 34px;
+	color: #304269;
+}
+div#export>ul>li.active {
+	background-color: #FF8D81;
+	cursor: inherit;
+}
+div.setting {
+	padding: 1%;
+	clear: both;
+	background-color: #FF8D81;
+}
+div.setting>p {
+	margin-bottom: 5px;
+}
+div.setting>input {
+	width: 100px;
+	display: inline-block;
+	margin-left: 1%;
+}
+div#generate {
+	margin-top: 1%;
+	position: relative;
+	width: 18%;
+	min-width: 120px;
+}
+div#generate>button {
+	font-size: 20px;
+	text-align: left;
+	margin: 1% 0;
+	padding: 3% 5%;
+	width: 100%;
+	background-color: #C0FFA6;
+}
+div#generate>i {
+	position: absolute;
+	top:14px;
+	left: 80%;
+	cursor: pointer;
+}
+div#timeline {
+	background-color: #E9F0F5;
+	position: relative;
+	/*padding: 2em;*/
+	overflow: scroll;
+}
+
+div#timeline::before {
+	content: "";
+	position: absolute;
+	left: 3em;
+	top:2%;
+	min-height: 100%;
+	width: 5px;
+	background-color: #D7E4ED;
+}
+div.timeline-block {
+	margin: 2em 0;
+	position: relative;
+}
+div.timeline-block:first-child {
+	margin-top: 0;
+}
+div.timeline-dot {
+	width: 25px;
+	height: 25px;
+	position: absolute;
+	left: 4px;
+	top: 8%;
+	border-radius: 50%;
+	background-color: white;
+}
+div.timeline-content {
+	margin-left: 4em;
+	background-color: #84DCD0;
+	border-radius: 5px;
+	padding: 0.2em 2em 2em;
+	position: relative;
+}
+div.timeline-content::before {
+	content: "";
+	position: absolute;
+	right: 100%;
+	top:12%;
+	width:0;
+	height:0;
+	border: 10px solid #E9F0F5;
+	border-right: 10px solid #84DCD0;
+}
+
+div.timeline-content>a {
+	text-decoration: none;
+	height: 34px;
+	width: 80px;
+	border-radius: 5px;
+	background-color: #ACB7C0;
+	color: white;
+	float: right;
+	padding: 7px 10px;
+	margin-left: 7px;
+	cursor: pointer;
+}
+div.timeline-content>a>i {
+	color: white;
+	margin-left: 10px;
+	opacity: 1;
+	cursor: pointer;
+}
+
+.popup {
+	width: 400px;
+}
+.repeattime {
+	display: inline;
+	width: 20%;
+	margin-right: 10px;
+}
+.repeat {
+	display: inline;
 }
 .row {
 	padding-top: 10px;
@@ -26,51 +299,15 @@ h1, #description {
 .row div {
 	margin-top: 10px;
 }
-.repeat {
-	display: inline;
-}
-input, option {
-	text-align: center;
+.popup-btn {
+	float: right;
 }
 
-#generate {
-	text-align: center;
-	font-size: 20px;
-	margin-top: 10px;
-	margin-left: 15px;
-}
-
-#tablecontainer {
-	position: absolute;
-	left: 0px;
-	top: 0px;
+div#footer {
+	padding-top: 1%;
+	clear: left;
 	width: 100%;
-	height: 100%;
-	z-index: -1;
-	background-color:rgba(0,0,0,0.5);
-	display: none;
-} 
-#ascii, #unicode {
-	color: yellow;
-	position: absolute;
-	left: 50%;
-	top:50%;
-	width: 33%;
-	height: 33%;
-	background-color: white;
-	opacity: 1;
-	margin-top: -15%;
-	margin-left: -15%;
-	display: none;
-}
-
-
-.coll{
-	width:25px;
-	height: 20px;
-	padding-top: 7px;
-}
-
-.popup {
-	width: 400px;
+	height: 90px;
+	background-color: #E7CEBD;
+	text-align: center;
 }
