--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,18 @@
 body {
-	background-color: white;
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 14px;
+	min-height: 800px;
+	font-weight: 400;
+}
+div#banner>ol>li[class="active"]>a {
+	cursor: inherit;
+	color: #91989F;
 }
 div#banner>ol>li>a {
 	text-decoration: none;
 	cursor: pointer;
+	font-size: 18px;
+	color: #0858B2;
 }
 @media (max-width: 767px) {
 	div#banner {
@@ -11,12 +20,13 @@ div#banner>ol>li>a {
 		min-height: 120px;
 		overflow: auto;
 		background-color: #E1E6FA;
+		border-bottom: 3px solid white;
 		padding:10px;
 		position: relative;
 	}
 	div#banner>img {
 		margin-left: 2%;
-		width: 180px;
+		width: 150px;
 		height: auto;
 		float: left;
 	}
@@ -25,7 +35,7 @@ div#banner>ol>li>a {
 		width: 100%;
 		clear: both;
 		top: 68%;
-		left: 5%;
+		left: 3%;
 		margin-bottom: 0px;
 		background-color: #E1E6FA;
 	}
@@ -33,41 +43,44 @@ div#banner>ol>li>a {
 	div#editor, div#timeline{
 		width: 90%;
 		margin: 5% auto;
-		height: 530px;
-		background-color: #ACDDEE;
+		height: 500px;
+		background-color: #A1CDFF;
 		padding: 1% 1%;
 		border-radius: 5px;
 		overflow: scroll;
+ 		border: 3px solid white;
 	}
 	div#preview {
 		width: 90%;
-		height: 530px;
-		background-color: white;
+		height: 500px;
+		background-color: #E9F0F5;
 		margin: 0 auto 5%;
 		padding: 2em;
 		border-radius: 5px;
  		overflow: scroll;
-
+ 		border: 3px solid white;
 	}
 }
 @media (min-width: 768px) {
 	div#banner {
+		min-height: 100px;
 		width: 100%;
 		overflow: auto;
 		background-color: #E1E6FA;
+		border-bottom: 3px solid white;
 		padding:10px;
 		position: relative;
 	}
 	div#banner>img {
 		margin-left: 2%;
-		width: 16.7%;
+		width: 15%;
 		min-width: 180px;
 		height: auto;
 		float: left;
 	}
 	div#banner>ol {
 		position: absolute;
-		width: 30%;
+		width: 60%;
 		clear: left;
 		top: 55%;
 		left: 30%;
@@ -77,50 +90,52 @@ div#banner>ol>li>a {
 	div#editor, div#timeline {
 		float: left;
 		width: 56%;
-		height: 530px;
-		background-color: #ACDDEE;
+		height: 90%;
+		background-color: #A1CDFF;
 		margin: 2% 2%;
 		padding: 2em;
 		border-radius: 5px;		
 		overflow: scroll;
+ 		border: 3px solid white;
 	}
 	div#preview {
 		float: left;
 		width: 38%;
-		height: 530px;
-		background-color: white;
+		height: 90%;
+		background-color: #E9F0F5;
 		margin: 2% 2% 2% 0;
 		padding: 1% 1%;
 		border-radius: 5px;
 		overflow: scroll;
+ 		border: 3px solid white;
+
 	}
 }
 
-#side-btn {
-	margin-right: 2%;
-	margin-top: 10px;
-	float: right;
-}
-#side-btn>button:hover {
-	background-color: #C2CAFA;
-}
 div#mainbody {
 	width: 100%;
 	overflow: hidden;
-	background-color: #645D68;
-	color: #304269;
+	background-color: #EBEBEB;
+	color: #2272CB;
+}
+div#editor .fa {
+	color: #0858B2;
+	opacity: 0.8;
+}
+div#editor .form-control {
+	font-size: 18px;
+}
+div#data-field .btn  {
+	font-size: 16px;
 }
 div#data-field {
-	margin: 1%;
+	margin: 2% 0.5% 1%;
 }
 div.data-block {
 	margin: 1% 0;
 }
-.fa {
-	color: #304269;
-	opacity: 0.8;
-}
-.fa-folder-open {
+
+div#data-field .fa-folder-open{
 	position: absolute;
 	top: 3px;
 	left: 80%;
@@ -140,23 +155,27 @@ div.column {
 	text-align: left;
 	margin: 0 1%; 
 }
-div#add>p {
-	margin-top: 1%;
-	line-height: 34px;
-	font-size: 16px;
-}
 
 div#add>i {
-	margin: 0 1%;
+	margin: 0 0.5%;
 	padding-left: 2px;
 	float: left;
 	cursor: pointer;
+}
+div#add>p {
+	margin-top: 1%;
+	margin-left: 6%;
+  	line-height: 34px;
+  	font-size: 18px;
 }
 
 div#export{
 	width: 100%;
 	overflow: hidden;
-	font-size: 16px;
+	font-size: 18px;
+}
+div#export>p {
+	margin: 0 5px 5px;
 }
 div#export>ul {
 	padding: 0;
@@ -169,43 +188,49 @@ div#export>ul>li{
 	margin: 0 3px 0 0;
 	padding: 3px 0 0 0;
 	float: left;
-	width: 100px;
+	width: 90px;
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
 	background-color: #efefef;
-	line-height: 34px;
-	color: #304269;
+	line-height: 30px;
 }
 div#export>ul>li.active {
-	background-color: #FF8D81;
+	background-color: #E1E6FA;
 	cursor: inherit;
 }
 div.setting {
 	padding: 1%;
 	clear: both;
-	background-color: #FF8D81;
+	background-color: #E1E6FA;
 }
 div.setting>p {
 	margin-bottom: 5px;
 }
 div.setting>input {
-	width: 100px;
+	width: 60px;
+	height: 28px;
 	display: inline-block;
 	margin-left: 1%;
 }
 div#generate {
-	margin-top: 1%;
+	margin-top: 2%;
 	position: relative;
 	width: 18%;
 	min-width: 120px;
 }
 div#generate>button {
 	font-size: 20px;
+	font-weight: 600;
 	text-align: left;
 	margin: 1% 0;
 	padding: 3% 5%;
 	width: 100%;
-	background-color: #C0FFA6;
+	border: 2px solid #0858B2;
+ 	background-color: #2272CB;
+ 	color: white;
+}
+div#generate .fa-play:before{
+	color: white;
 }
 div#generate>i {
 	position: absolute;
@@ -247,7 +272,7 @@ div.timeline-dot {
 }
 div.timeline-content {
 	margin-left: 4em;
-	background-color: #84DCD0;
+	background-color: #BCD8FD;
 	border-radius: 5px;
 	padding: 0.2em 2em 2em;
 	position: relative;
@@ -260,7 +285,7 @@ div.timeline-content::before {
 	width:0;
 	height:0;
 	border: 10px solid #E9F0F5;
-	border-right: 10px solid #84DCD0;
+	border-right: 10px solid #BCD8FD;
 }
 
 div.timeline-content>a {
@@ -317,6 +342,7 @@ div#footer {
 	clear: left;
 	width: 100%;
 	height: 90px;
-	background-color: #E7CEBD;
+	background-color: #DCDCDC;
+  	border-top: 3px solid white;
 	text-align: center;
 }
