--- a/css/style.css
+++ b/css/style.css
@@ -326,8 +326,8 @@ div.timeline-content>a>i {
 
 #popup {
 	border-radius: 7px;
-	padding-top: 40px;
-	background-color: #C0BFC0;
+	padding-top: 15px;
+	background-color: #A1CDFF;
 }
 .popup {
 	width: 400px;
