Change CSS for popup

--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ div.timeline-content>a>i {
 #popup {
 	border-radius: 7px;
 	padding-top: 15px;
-	background-color: #A1CDFF;
+	background-color: #3399cc;
 }
 .popup {
 	width: 400px;
