preview data collapse done

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ div#banner>ol>li>a {
  		border: 3px solid white;
 	}
 	div#preview {
+		font-family: 'Abel', sans-serif;
 		width: 90%;
 		height: 500px;
 		background-color: #E9F0F5;
@@ -104,6 +105,7 @@ div#banner>ol>li>a {
  		border: 3px solid white;
 	}
 	div#preview {
+		font-family: 'Abel', sans-serif;
 		float: left;
 		width: 38%;
 		height: 90%;
@@ -353,6 +355,14 @@ div#footer {
 	background-color: #DCDCDC;
   	border-top: 3px solid white;
 	text-align: center;
+}
+
+/* dataset preview*/
+.dataCollapseButton {
+	position: relative;
+	top: 19px;
+	width: 13px;
+	margin-left: -10px;
 }
 
 /* preview loading settings*/
