--- a/css/joyride-2.1.css
+++ b/css/joyride-2.1.css
@@ -10,10 +10,9 @@ body {
 /* Default styles for the container */
 .joyride-tip-guide {
   position: absolute;
-  background: #000;
-  background: rgba(0,0,0,0.8);
+  background: #eee;
   display: none;
-  color: #fff;
+  color: black;
   width: 300px;
   z-index: 101;
   top: 0; /* keeps the page from scrolling when calculating position */
@@ -63,8 +62,7 @@ body {
   border-bottom-color so here we set the border-color
   and override the top,left,right colors below.
   */
-  border-color: #000;
-  border-color: rgba(0,0,0,0.8);
+  border-color: #eee;
   border-top-color: transparent !important;
   border-left-color: transparent !important;
   border-right-color: transparent !important;
@@ -166,7 +164,7 @@ body {
   text-decoration: none;
   color: rgb(255,255,255);
   border: solid 1px rgb(0,60,180);
-  background: rgb(0,99,255);
+  background: rgb(0,60,180);
   background: -moz-linear-gradient(top, rgb(0,99,255) 0%, rgb(0,85,214) 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(0,99,255)), color-stop(100%,rgb(0,85,214)));
   background: -webkit-linear-gradient(top, rgb(0,99,255) 0%,rgb(0,85,214) 100%);
@@ -215,7 +213,7 @@ body {
   position: absolute;
   right: 10px;
   top: 10px;
-  color: rgba(255,255,255,0.4) !important;
+  color: rgb(0,60,180) !important;
   text-decoration: none;
   font-family: Verdana, sans-serif;
   font-size: 10px;
@@ -224,7 +222,7 @@ body {
 }
 
 .joyride-close-tip:hover {
-  color: rgba(255,255,255,0.9) !important;
+  color: rgb(0,99,255); !important;
 }
 
 .joyride-modal-bg {
@@ -245,12 +243,9 @@ body {
 }
 
 .joyride-expose-wrapper {
-    background-color: #ffffff;
+    background-color: transparent;
     position: absolute;
     z-index: 102;
-    -moz-box-shadow: 0px 0px 30px #ffffff;
-    -webkit-box-shadow: 0px 0px 30px #ffffff;
-    box-shadow: 0px 0px 30px #ffffff;
 }
 
 .joyride-expose-cover {
