--- a/css/style.css
+++ b/css/style.css
@@ -273,10 +273,11 @@ div#saveDiv i {
 div.savewindow {
 	position: absolute;
 	width: 400px;
-	height: 140px;
+	height: 180px;
 	border: 1px solid #ccc;
+	border-radius: 5px;
 	background-color: #fff;
-	padding: 0px 5px 5px;
+	padding: 5px 15px 10px;
 }
 div.cover {
 	position: absolute;
@@ -290,7 +291,7 @@ div.savewindow::before {
 	border-width: 7px; 
 	border-style: solid;
 	right: 100%;
-	top:70%;
+	top:80%;
 	width:0;
 	height:0;
 }
@@ -317,22 +318,23 @@ div.savewindow::before {
 	border-radius: 5px;
 	line-height: 28px;
 	padding: 0 0 0 2px;
-	color: #fff;
+	color: #000;
 	overflow: hidden;
 	box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.15) inset;
 }
 
-.inputcontainer input {
+.inputcontainer>input {
 	padding: 0;
 	border: 0;
 	box-shadow: none;
 	background: none;
-	max-width: 350px;
+	width: 100px;
 	overflow: hidden;
 	height: 28px;
 	margin-left: 5px;
+	zoom: 1;
 }
-.inputcontainer input:focus{
+.inputcontainer>input:focus{
     outline: 0;
 }
 div#timeline {
